--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
         <div id="results"> Display results here </div>
         <div id="calculator">
             
-            <button id="/"> /</button>
-            <button id="*"> *</button>
+            <button id="divide"> /</button>
+            <button id="multiply"> *</button>
             <button id="backspace"> &#8617; </button>
             <button id="seven"> 7</button>
             <button id="eight"> 8</button>
             <button id="nine"> 9</button>
-            <button id="+"> +</button>            
+            <button id="plus"> +</button>            
             <button id="four"> 4</button>
             <button id="five"> 5</button>
             <button id="six"> 6</button>
-            <button id="-"> -</button>
+            <button id="minus"> -</button>
             <button id="one"> 1</button>
             <button id="two"> 2</button>
             <button id="three"> 3</button>
-            <button id="."> .</button>
+            <button id="dot"> .</button>
             <button id="zero"> 0</button>
             <button id="CE"> CE</button>
             <button id="equal"> =</button>
