--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <!-- Content Section -->
     <div id="my-title">
-        <p id="my-title"> My Calculator </p>
+        <p id="title"> My Calculator </p>
         <div id="calculator-container">
             <div id="results"> </div>
             <div id="calculator">
